[package]
name = "jtar"
version = "0.1.0"
authors = ["Yvan Sraka <yvan@sraka.xyz>"]
edition = "2018"
description = "JTAR is a dumb archive format that appears to be a subset of JSON (which is handy)"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
glob = "0.3.0"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"